# obs-nowplaying

./: Cargo.toml  LICENCE  LICENCE.md  README.MD  build.rs
now-playing-extension/: manifest.json
now-playing-extension/src/: background.js
src/: main.rs
