[package]
name = "obs-nowplaying"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "6.0.0"
warp = "0.3"
base64 = "0.22.1"